--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
 - "3.8"
+before_install:
+    - pip install pytest pytest-cov pytest-pep8
+    - pip install python-coveralls coverage
 script:
   - pytest -v --cov=autovps tests
 after_success:
